--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.7.2
+beautifulsoup4==4.12.2
 black==23.10.1
 click==8.1.7
 Django==4.2.6
+django-bootstrap-v5==1.0.11
 Faker==19.12.0
 mypy-extensions==1.0.0
 packaging==23.2
@@ -9,6 +11,7 @@ pathspec==0.11.2
 platformdirs==3.11.0
 python-dateutil==2.8.2
 six==1.16.0
+soupsieve==2.5
 sqlparse==0.4.4
 tomli==2.0.1
 typing_extensions==4.8.0
