--- a/requirements.txt
+++ b/requirements.txt
@@ -2,23 +2,29 @@ asgiref==3.7.2
 beautifulsoup4==4.12.2
 black==23.10.1
 Brotli==1.1.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
 click==8.1.7
 dj-database-url==2.1.0
 Django==4.2.6
 django-bootstrap-v5==1.0.11
 Faker==19.12.0
 gunicorn==21.2.0
+idna==3.4
 mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.11.2
 platformdirs==3.11.0
 psycopg==3.1.12
+psycopg-c==3.1.12
 python-dateutil==2.8.2
+requests==2.31.0
 six==1.16.0
 soupsieve==2.5
 sqlparse==0.4.4
 tomli==2.0.1
 typing_extensions==4.8.0
+urllib3==2.1.0
 whitenoise==6.6.0
 
 # Uncomment these lines to use a Postgres database. Both are needed, since in production
