--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,6 @@ pathspec==0.11.2
 Pillow==10.1.0
 platformdirs==3.11.0
 psycopg==3.1.12
-psycopg-c==3.1.14
 pycparser==2.21
 PyJWT==2.8.0
 python-dateutil==2.8.2
@@ -48,5 +47,6 @@ whitenoise==6.6.0
 # On other platforms/in development, the precompiled binary package is used instead, to
 # speed up installation and avoid errors from missing libraries/headers.
 
+psycopg-c==3.1.14; sys_platform == "linux"
 psycopg[c]; sys_platform == "linux"
 psycopg[binary]; sys_platform != "linux"
