--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ packaging==23.2
 pathspec==0.11.2
 Pillow==10.1.0
 platformdirs==3.11.0
-psycopg==3.1.12
+psycopg
 pycparser==2.21
 PyJWT==2.8.0
 python-dateutil==2.8.2
