--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ django-allauth==0.58.2
 django-bootstrap-v5==1.0.11
 django-storages==1.14.2
 djangorestframework==3.14.0
+ecdsa==0.18.0
 Faker==19.12.0
 gunicorn==21.2.0
 idna==3.4
