--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ pytest==7.4.4
 python-dateutil==2.8.2
 python3-openid==3.2.0
 pytest-django==4.7.0
+responses==0.24.1
 requests==2.31.0
 requests-oauthlib==1.3.1
 s3transfer==0.8.2
