--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ dj-database-url==2.1.0
 Django==4.2.6
 django-allauth==0.58.2
 django-bootstrap-v5==1.0.11
+django-filter==23.5
 django-storages==1.14.2
 djangorestframework==3.14.0
 ecdsa==0.18.0
