--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -7,4 +7,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: psf/black@stable
+      - name: Check code formatting
+        run: black --check .
